--- a/css/index.css
+++ b/css/index.css
@@ -402,7 +402,13 @@ footer {
   .section1 h1,
   .section2 h1,
   .section3 h1 {
-    font-size: 1rem;
+    font-size: 1.2rem;
+  }
+
+  .section1 p,
+  .section2 p,
+  .section3 p {
+    font-size: 0.9rem;
   }
 
   .section2, .section3 {
