--- a/css/index.css
+++ b/css/index.css
@@ -422,7 +422,7 @@ footer {
 
   .main-image-container img {
     width: 100%;
-    height: auto;
+    height: 250px;
     object-fit: cover;
   }
 
