--- a/css/servicii.css
+++ b/css/servicii.css
@@ -260,6 +260,7 @@ footer {
     flex-direction: column;
     min-height: auto;
     width: 100%;
+    margin-bottom: 1rem;
   }
   .services-images-container,
   .services-info {
@@ -287,7 +288,7 @@ footer {
   padding: clamp(0.7rem, 1vw, 1.2rem)
            clamp(2rem, 2.5vw, 3rem)
            clamp(0.7rem, 1vw, 1.2rem)
-           clamp(2rem, 2.5vw, 3rem)
+           clamp(2rem, 2.5vw, 3rem);
   font-size: clamp(0.8rem, 2vw, 1rem);
   cursor: pointer;
 }
